# nonebot-plugin-inspect

./: .gitignore  README.md  pyproject.toml
src/nonebot_plugin_inspect/: __init__.py
src/nonebot_plugin_inspect/i18n/: .config.json  .lang.schema.json  .template.json  en-US.json  ja-JP.json  model.py  ru-RU.json  zh-TW.json
