[project]
name = "nonebot-plugin-inspect"
version = "0.1.2"
description = "Inspect on any user, group or channel"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "nonebot-plugin-uninfo>=0.3.0",
    "nonebot-plugin-alconna>=0.53.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/nonebot_plugin_inspect"]

[tool.pdm.dev-dependencies]
dev = [
    "nonebot-adapter-satori>=0.12.6",
    "nonebot2[httpx,websockets]>=2.3.3",
]

[tool.nonebot]
adapters = [
    { name = "Satori", module_name = "nonebot.adapters.satori" },
    # { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = []
plugin_dirs = ["src"]
builtin_plugins = []
